--- a/work-better-jet/package.json
+++ b/work-better-jet/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-      "express": "4.x.x"
+    "express": "4.x.x",
+    "mysql": "2.x.x"
   },
   "author": "",
   "license": "ISC"
